@@ -1,3 +1,9 @@
+2004-12-09  Greg Troxel  <gdt@fnord.ir.bbn.com>
+
+	* ospf_apiserver.c (ospf_apiserver_term): Remove unused variable
+	nnode to fix warning.
+	(ospf_apiserver_term): add comment about obviously wrong code.
+
 2004-12-08 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* *.c: Change level of debug messages to LOG_DEBUG.
